--- a/src/styles/index.html
+++ b/src/styles/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <h1>sorteador</h1>
-        <form>
+        <form id="form-sorteador">
             <div>
                 <label for="numero-maximo">numero-maximo</label>
                 <input type="number" id="numero-maximo">
@@ -23,6 +23,8 @@
             <button type="submit">sortear numero</button>
         </form>
     </main>
+    <script src="@@ENDERECO_DO_JS"></script>
+
     
 </body>
 </html>
